# alidns-mcp-server

./: README.md  pyproject.toml
src/alidns_mcp_server/: __main__.py  server.py
